--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,9 @@ spring.ai.mcp.server.name=spring_boot_ai_mcp_server
 spring.ai.mcp.server.type=SYNC
 # Transport configuration
 spring.ai.mcp.server.stdio=false
-spring.ai.mcp.server.sse-message-endpoint=/mcp/message
+#spring.ai.mcp.server.sse-message-endpoint=/mcp/message
+spring.ai.mcp.server.sse.enabled=true
+spring.ai.mcp.server.sse.endpoint=/mcp/message
 
 
 #GitHub API Properties
