updated the observations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=spring_boot_ai_mcp_server
-server.servlet.context-path=mysb-mcpserver-app
+server.servlet.context-path=/
 server.port=8088
 
 # logging properties
@@ -7,12 +7,22 @@ logging.level.root=INFO
 logging.level.com.spring.rest=INFO
 spring.output.ansi.enabled=ALWAYS
 logging.level.org.springframework.web=debug
+logging.level.org.springframework.ai.mcp=TRACE
 logging.file.name=${spring.application.name}.log
+
 
 # Spring AI MCP Server Properties
 spring.ai.mcp.server.name=spring_boot_ai_mcp_server
 spring.ai.mcp.server.type=SYNC
+spring.ai.mcp.server.annotation-scanner.base-packages=com.naga.github
+spring:
+ai:
+mcp:
+server:
+annotation-scanner:
+base-packages: com.naga.mcp.tools
 # Transport configuration
+spring.ai.mcp.server.enabled=true
 spring.ai.mcp.server.stdio=false
 #spring.ai.mcp.server.sse-message-endpoint=/mcp/message
 spring.ai.mcp.server.sse.enabled=true
@@ -22,7 +32,7 @@ spring.ai.mcp.server.sse.endpoint=/mcp/message
 #GitHub API Properties
 github.api.basePath=https://api.github.com/repos/
 github.api.version=2022-11-28
-github.api.bearer.token=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
+github.api.bearer.token=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
 github.owner=nagachary
 github.repo=java-must-read
 
