deleted secrets from properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,12 +15,7 @@ logging.file.name=${spring.application.name}.log
 spring.ai.mcp.server.name=spring_boot_ai_mcp_server
 spring.ai.mcp.server.type=SYNC
 spring.ai.mcp.server.annotation-scanner.base-packages=com.naga.github
-spring:
-ai:
-mcp:
-server:
-annotation-scanner:
-base-packages: com.naga.mcp.tools
+
 # Transport configuration
 spring.ai.mcp.server.enabled=true
 spring.ai.mcp.server.stdio=false
@@ -32,7 +27,7 @@ spring.ai.mcp.server.sse.endpoint=/mcp/message
 #GitHub API Properties
 github.api.basePath=https://api.github.com/repos/
 github.api.version=2022-11-28
-github.api.bearer.token=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
+github.api.bearer.token=test
 github.owner=nagachary
 github.repo=java-must-read
 
