updated props file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,7 @@ spring.ai.mcp.server.annotation-scanner.base-packages=com.naga.github
 spring.ai.mcp.server.enabled=true
 spring.ai.mcp.server.stdio=false
 #spring.ai.mcp.server.sse-message-endpoint=/mcp/message
+spring.ai.mcp.server.protocol=STREAMABLE
 spring.ai.mcp.server.sse.enabled=true
 spring.ai.mcp.server.sse.endpoint=/mcp/message
 
@@ -34,7 +35,7 @@ github.repo=java-must-read
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
 # Expose the health endpoint
-management.endpoints.web.exposure.include=mappings
+management.endpoints.web.exposure.include=*
 # Show full details
 management.endpoint.health.show-details=always
 
