--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,18 +11,23 @@ logging.level.org.springframework.ai.mcp=TRACE
 logging.file.name=${spring.application.name}.log
 
 
-# Spring AI MCP Server Properties
+# 1. Identity
 spring.ai.mcp.server.name=spring_boot_ai_mcp_server
 spring.ai.mcp.server.type=SYNC
-spring.ai.mcp.server.annotation-scanner.base-packages=com.naga.github
 
-# Transport configuration
+# 2. Protocol Selection (STREAMABLE is the modern replacement for SSE)
+spring.ai.mcp.server.protocol=STREAMABLE
 spring.ai.mcp.server.enabled=true
 spring.ai.mcp.server.stdio=false
-#spring.ai.mcp.server.sse-message-endpoint=/mcp/message
-spring.ai.mcp.server.protocol=STREAMABLE
-spring.ai.mcp.server.sse.enabled=true
-spring.ai.mcp.server.sse.endpoint=/mcp/message
+
+# 3. Streamable-HTTP Specifics (Crucial for 2.0.0-M2)
+# This defines the base path the client connects to. Default is /mcp
+spring.ai.mcp.server.streamable-http.mcp-endpoint=/mcp
+
+# 4. Annotation Scanning
+# Ensure this matches your actual Java package structure!
+spring.ai.mcp.server.annotation-scanner.enabled=true
+spring.ai.mcp.server.annotation-scanner.base-packages=com.naga.github
 
 
 #GitHub API Properties
