addressed runtime issues

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,13 +16,16 @@ spring.ai.mcp.server.name=spring_boot_ai_mcp_server
 spring.ai.mcp.server.type=SYNC
 
 # 2. Protocol Selection (STREAMABLE is the modern replacement for SSE)
-spring.ai.mcp.server.protocol=STREAMABLE
+#spring.ai.mcp.server.protocol=STREAMABLE
 spring.ai.mcp.server.enabled=true
 spring.ai.mcp.server.stdio=false
 
 # 3. Streamable-HTTP Specifics (Crucial for 2.0.0-M2)
 # This defines the base path the client connects to. Default is /mcp
-spring.ai.mcp.server.streamable-http.mcp-endpoint=/mcp
+#spring.ai.mcp.server.streamable-http.mcp-endpoint=/mcp
+
+spring.ai.mcp.server.protocol=SSE
+spring.ai.mcp.server.sse.endpoint=/mcp
 
 # 4. Annotation Scanning
 # Ensure this matches your actual Java package structure!
