--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,49 +1,65 @@
+# ============================================
+# Application Configuration
+# ============================================
 spring.application.name=spring_boot_ai_mcp_server
 server.servlet.context-path=/
 server.port=8088
 
-# logging properties
+# ============================================
+# Logging Configuration
+# ============================================
 logging.level.root=INFO
-logging.level.com.spring.rest=INFO
-spring.output.ansi.enabled=ALWAYS
-logging.level.org.springframework.web=debug
+logging.level.com.naga.github=DEBUG
+logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.ai.mcp=TRACE
+spring.output.ansi.enabled=ALWAYS
 logging.file.name=${spring.application.name}.log
 
-
-# 1. Identity
-spring.ai.mcp.server.name=spring_boot_ai_mcp_server
-spring.ai.mcp.server.type=SYNC
-
-# 2. Protocol Selection (STREAMABLE is the modern replacement for SSE)
-#spring.ai.mcp.server.protocol=STREAMABLE
+# ============================================
+# MCP Server Configuration - SSE Transport
+# ============================================
+# Enable MCP Server
 spring.ai.mcp.server.enabled=true
-spring.ai.mcp.server.stdio=false
 
-# 3. Streamable-HTTP Specifics (Crucial for 2.0.0-M2)
-# This defines the base path the client connects to. Default is /mcp
-#spring.ai.mcp.server.streamable-http.mcp-endpoint=/mcp
+# Server Identity
+spring.ai.mcp.server.name=spring_boot_ai_mcp_server
+spring.ai.mcp.server.version=1.0.0
 
-spring.ai.mcp.server.protocol=SSE
-spring.ai.mcp.server.sse.endpoint=/mcp
+# Protocol Selection - Use SSE for HTTP Server-Sent Events
+spring.ai.mcp.server.transport=sse
 
-# 4. Annotation Scanning
-# Ensure this matches your actual Java package structure!
+# SSE Endpoint Configuration
+# Clients will connect to: http://localhost:8088/mcp/sse
+spring.ai.mcp.server.sse.path=/mcp/sse
+
+# Tool Discovery via Annotations
 spring.ai.mcp.server.annotation-scanner.enabled=true
 spring.ai.mcp.server.annotation-scanner.base-packages=com.naga.github
 
-
-#GitHub API Properties
+# ============================================
+# GitHub API Configuration
+# ============================================
 github.api.basePath=https://api.github.com/repos/
 github.api.version=2022-11-28
-github.api.bearer.token=test
+# Use environment variable: GITHUB_API_BEARER_TOKEN
+github.api.bearer.token=${GITHUB_API_BEARER_TOKEN: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}
 github.owner=nagachary
 github.repo=java-must-read
 
+# ============================================
+# Spring Boot Configuration
+# ============================================
+# Exclude DataSource auto-configuration
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
-# Expose the health endpoint
-management.endpoints.web.exposure.include=*
-# Show full details
+# ============================================
+# Actuator Configuration
+# ============================================
+management.endpoints.web.exposure.include=health,info,metrics,mcp
 management.endpoint.health.show-details=always
+management.endpoint.health.probes.enabled=true
 
+# CORS Configuration (add if needed)
+spring.ai.mcp.server.cors.allowed-origins=http://localhost:3000,https://yourdomain.com
+spring.ai.mcp.server.cors.allowed-methods=GET,POST,OPTIONS
+spring.ai.mcp.server.cors.allowed-headers=*
