--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,7 +42,7 @@ spring.ai.mcp.server.annotation-scanner.base-packages=com.naga.github
 github.api.basePath=https://api.github.com/repos/
 github.api.version=2022-11-28
 # Use environment variable: GITHUB_API_BEARER_TOKEN
-github.api.bearer.token=${GITHUB_API_BEARER_TOKEN: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}
+github.api.bearer.token=${GITHUB_API_BEARER_TOKEN:test}
 github.owner=nagachary
 github.repo=java-must-read
 
