--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -42,7 +42,7 @@ spring.ai.mcp.server.annotation-scanner.base-packages=com.naga.github
 github.api.basePath=https://api.github.com/repos/
 github.api.version=2022-11-28
 # Use environment variable: GITHUB_API_BEARER_TOKEN
-github.api.bearer.token=GITHUB_API_BEARER_TOKEN
+github.api.bearer.token=${GITHUB_API_BEARER_TOKEN}
 github.owner=nagachary
 github.repo=java-must-read
 
@@ -66,9 +66,9 @@ spring.ai.mcp.server.cors.allowed-headers=*
 
 # Security
 # Use environment variable: MCP_SERVER_SHARED_API_KEY - This is the shared key
-mcp.auth.api-key=MCP_SERVER_SHARED_API_KEY
+mcp.auth.api-key=${MCP_SERVER_SHARED_API_KEY}
 # Use environment variable: MCP_AUTH_JWT_SECRET
-mcp.auth.jwt-secret=MCP_AUTH_JWT_SECRET
+mcp.auth.jwt-secret=${MCP_AUTH_JWT_SECRET}
 mcp.auth.jwt-ttl-seconds=300
 # 5 Minutes
 mcp.auth.refresh-window-seconds=60
